--- a/JTTabBarControllerDemo/Base.lproj/Main.storyboard
+++ b/JTTabBarControllerDemo/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
         <!--First-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="FirstViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -38,7 +38,7 @@
                             <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="First" id="acW-dT-cKf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
@@ -47,7 +47,7 @@
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
@@ -84,10 +84,61 @@
             </objects>
             <point key="canvasLocation" x="750" y="360"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="wZT-L8-44b">
+            <objects>
+                <navigationController id="r62-45-LPd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="PdO-IT-mBn"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jJx-79-Twt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="8z8-qU-6iy" kind="relationship" relationship="rootViewController" id="asY-Ow-J77"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uuj-hX-gTE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="750" y="1090"/>
+        </scene>
+        <!--Third View Controller-->
+        <scene sceneID="ErA-yd-rAy">
+            <objects>
+                <viewController id="8z8-qU-6iy" customClass="ThirdViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="85s-MT-jY8"/>
+                        <viewControllerLayoutGuide type="bottom" id="OIX-nr-47A"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bLZ-AJ-RLA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0tX-4z-c0p">
+                                <rect key="frame" x="277" y="179" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonAction:" destination="8z8-qU-6iy" eventType="touchUpInside" id="Co7-St-9j0"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.050980392159999999" green="0.7843137255" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="0tX-4z-c0p" secondAttribute="centerX" id="8eX-EZ-zDY"/>
+                            <constraint firstAttribute="centerY" secondItem="0tX-4z-c0p" secondAttribute="centerY" constant="106" id="mNb-kJ-W3T"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="zRU-DE-FUn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TQe-zm-DjW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1404" y="1090"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController id="49e-Tb-3d3" customClass="JTTabBarController" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -97,15 +148,155 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="r62-45-LPd" kind="relationship" relationship="viewControllers" id="LOV-JE-tYv"/>
+                        <segue destination="9XN-3W-O2Q" kind="relationship" relationship="viewControllers" id="VFm-PR-rVd"/>
+                        <segue destination="yEM-Hy-mXY" kind="relationship" relationship="viewControllers" id="rcZ-pp-mUT"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="0.0" y="0.0"/>
+            <point key="canvasLocation" x="-262" y="1090"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="gLA-ra-Av8">
+            <objects>
+                <navigationController id="9XN-3W-O2Q" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="kvs-tA-oMS"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0SL-vK-Ehi">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="7Tu-ID-fRg" kind="relationship" relationship="rootViewController" id="ove-Va-3bQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wAJ-na-YaS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="743" y="1798"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="uA4-cH-D07">
+            <objects>
+                <viewController id="7Tu-ID-fRg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ONQ-z3-uWP"/>
+                        <viewControllerLayoutGuide type="bottom" id="sX5-ns-cC2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kBp-PD-sPK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="45Y-yR-jqu">
+                                <rect key="frame" x="277" y="179" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="3e3-Cv-Ro9" kind="show" id="Djs-rY-HjC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.050980392159999999" green="0.7843137255" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="45Y-yR-jqu" secondAttribute="centerY" constant="106" id="Jcg-Z4-dHc"/>
+                            <constraint firstAttribute="centerX" secondItem="45Y-yR-jqu" secondAttribute="centerX" id="cnh-fd-5Al"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="or7-a1-hDR"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Jv-bs-koq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1397" y="1798"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7co-bi-ZWA">
+            <objects>
+                <viewController hidesBottomBarWhenPushed="YES" id="3e3-Cv-Ro9" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6do-h4-2C6"/>
+                        <viewControllerLayoutGuide type="bottom" id="pY9-mE-Lsg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0Zo-zP-IWT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZJq-QR-7nJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2065" y="1798"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="drD-o8-QFY">
+            <objects>
+                <navigationController id="yEM-Hy-mXY" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="wy5-iM-sEY"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sfc-Ah-Dtb">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="fpM-Ko-9R5" kind="relationship" relationship="rootViewController" id="nog-mV-AGJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TPZ-Bm-sAr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="743" y="2494"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ZFF-rj-Bts">
+            <objects>
+                <viewController id="fpM-Ko-9R5" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xEX-uW-XF1"/>
+                        <viewControllerLayoutGuide type="bottom" id="ryp-9K-Go9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9AK-6b-ShI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z4S-dk-hdO">
+                                <rect key="frame" x="277" y="179" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="d4J-0E-967" kind="show" id="BbX-8r-dmy"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.050980392159999999" green="0.7843137255" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="z4S-dk-hdO" secondAttribute="centerX" id="US3-zi-Cx9"/>
+                            <constraint firstAttribute="centerY" secondItem="z4S-dk-hdO" secondAttribute="centerY" constant="106" id="tig-jb-0Qd"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Hqj-n2-cJN"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PWN-lg-PZV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1397" y="2502"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="WgI-Kk-TQb">
+            <objects>
+                <viewController hidesBottomBarWhenPushed="YES" id="d4J-0E-967" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Sj8-UR-npr"/>
+                        <viewControllerLayoutGuide type="bottom" id="cf2-QK-HJY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="H4v-BZ-MS6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dSO-f2-Y1P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2065" y="2502"/>
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
     </resources>
 </document>
